Development
	Remove need for LIBTOOL, program should compile cleaner now
	Patch to correct --as-needed linker flag
0.9.6
	Fix constant issue with old xulrunner kits
	Update GUI while cache is loading
	Make Copy Location get the entire url
	Add support for Apple's 'postdomevents' option
	Apply browser id patch to work around site specifically looking for mplayerplug-in
	Infrastructure to support windowless mode, but it doesn't work
	Convert internal preference store to gm_pref_store from libgmlib
	Reuse gm_tempname from libgmlib saving duplicate code
	Merge in libgmlib, it is pulled from the gnome-mplayer svn
0.9.5
	Fix problem with memmem on OpenBSD, memmem_compat is now used by all
	Added Japanese Translation by Munehiro Yamamoto
	Fixed issue with pt_BR.po file
0.9.4
	Add support for OpenBSD which does not have memmem
	Add Italian translation by Francesco Groccia
	Make gecko-mediaplayer work in Konqueror 4
	Keep updating progress text until file is completely downloaded
	Try to get bitrate from media at 1-5% markers
	Remove gconftool --shutdown from makefile
	Cleanup configure.in and Makefile.am files
	Remove unnecessary files from build tree
	Switch from XPCom to NPRuntime support
	Fix a problem with the dbus path when the side provides and invalid path
	Fix some compliation issues with xulrunner-sdk 1.9.1
	Workaround file rename in xulrunner sdk
0.9.3
	Make http://everadio.gamingradio.net work
	Fix compilation dependancy
	Now translations work
	Enable translations hopefully
	Replace call to getenv with g_getenv
	Flip to streaming mode when we get a sequence starting with "Content-length"
	Fix video/mpeg declaration
	More mimetype cleanup
	Add audio/ogg and video/ogg mimetypes
	Add mimetype application/ogg
	Allow compile against xulrunner-sdk
	Added a couple of additional mimetypes
0.9.2
	Convert to XDG cache location
	Try using gnome-mplayer if not found use gnome-mplayer-minimal
	Version bump
	Fix up a couple of minor compile warnings