@@ -102,6 +102,18 @@ AS_IF([test "x$with_gconf" != xno],
     AC_SUBST(GCONF_LIBS)
     ])
 
+AC_ARG_WITH([gio],
+    [AS_HELP_STRING([--with-gio],
+        [Use GIO for file I/O])],
+        [],
+        [with_gio=check])
+AS_IF([test "x$with_gio" != xno], 
+    [PKG_CHECK_MODULES(GIO,[gio-2.0],[GIO_DEFINES="-DGIO_ENABLED" AC_DEFINE([GIO_ENABLED],[1],[Define to 1 if you have GIO support])],AC_MSG_WARN([Compiling without gio support]))
+    AC_SUBST(GIO_DEFINES)
+    AC_SUBST(GIO_CFLAGS)
+    AC_SUBST(GIO_LIBS)
+    ])
+
 AC_ARG_ENABLE(caching,
 	AC_HELP_STRING([--disable-caching],[Disable caching of remote media to local storage]),
 	[usecache=$enableval],[usecache=yes])
